menambahkan fitur info-box pada masing2 halaman admin dan memberikan nilai awal 0 agar tinggi info-box tidak berubah, memperbaiki bug akibat panjang karakter jika nilai tinggi pada count-up-value

--- a/app/views/admin/bantuan/index.html
+++ b/app/views/admin/bantuan/index.html
@@ -1,3 +1,97 @@
+<div class="row">
+    <div class="col-xl-3 col-md-6">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Bantuan</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan']) ?>">0</span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                            <i class="ni ni-bullet-list-67"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Bulan yang lalu</span>
+                </p> -->
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3 col-md-6">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Menunggu Persetujuan</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_menunggu']) ?>">0</span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                            <i class="ni ni-books"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Bulan yang lalu</span>
+                </p> -->
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3 col-md-6">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Sedang Berjalan</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_aktif']) ?>">0</span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                            <i class="ni ni-delivery-fast"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Bulan yang lalu</span>
+                </p> -->
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3 col-md-6">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Selesai Diberikan</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_selesai']) ?>">0</span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-light text-white rounded-circle shadow">
+                            <i class="ni ni-paper-diploma"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Sejak tahun ini</span>
+                </p> -->
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row justify-center">
     <div class="col">
         <div class="card">
