--- a/app/views/admin/home/sys.html
+++ b/app/views/admin/home/sys.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Akun Donatur</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_akun']) ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_akun']) ?>">0</span>
                     </div>
                     <div class="col-auto">
                         <div
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Donatur</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_donatur']) ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_donatur']) ?>">0</span>
                     </div>
                     <div class="col-auto">
                         <div
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Donasi Masuk</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_donasi']) ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_donasi']) ?>">0</span>
                     </div>
                     <div class="col-auto">
                         <div
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Bantuan Berjalan</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan']) ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan']) ?>">0</span>
                     </div>
                     <div class="col-auto">
                         <div
