--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -137,7 +137,7 @@
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6">
                         <div class="copyright text-center  text-lg-left  text-muted">
-                            &copy; 2021 <a href="www.pojokberbagi.id/Home" class="font-weight-bold ml-1"
+                            &copy; 2021 - <?= date("Y"); ?> <a href="https://pojokberbagi.id" class="font-weight-bold ml-1"
                                 target="_blank">Pojok Berbagi</a>
                         </div>
                     </div>
