--- a/app/views/admin/akun/index.html
+++ b/app/views/admin/akun/index.html
@@ -1,3 +1,75 @@
+
+<div class="row">
+    <div class="col">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Akun</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_akun']) ?>">0</span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                            <i class="ni ni-badge"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Bulan yang lalu</span>
+                </p> -->
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Akun Terblock</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_akun_terblock']) ?>">0</span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                            <i class="ni ni-lock-circle-open"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Bulan yang lalu</span>
+                </p> -->
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Akun Admin</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_akun_admin']) ?>">0</span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                            <i class="ni ni-circle-08"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Bulan yang lalu</span>
+                </p> -->
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row justify-center">
     <div class="col">
         <div class="card">
@@ -67,7 +139,7 @@
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
                                         <a class="dropdown-item <?= (($data['akun']->id_akun == $data_akun->id_akun) ? 'disabled' : '' ) ?>" href="/admin/akun/blok/<?= $data_akun->id_akun; ?>"><?= ($data_akun->status == 1) ? 'Blokir' : 'Unblokir' ?></a>
-                                        <a class="dropdown-item disabled" href="/admin/akun/delete/<?= $data_akun->id_akun; ?>">Hapus</a>
+                                        <!-- <a class="dropdown-item disabled" href="/admin/akun/delete/<?= $data_akun->id_akun; ?>">Hapus</a> -->
                                     </div>
                                 </div>
                             </td>
