--- a/app/views/admin/donatur/sys.html
+++ b/app/views/admin/donatur/sys.html
@@ -1,3 +1,51 @@
+<div class="row">
+    <div class="col">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Donatur</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_donatur']) ?>"></span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                            <i class="ni ni-single-02"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Bulan yang lalu</span>
+                </p> -->
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card card-stats">
+            <!-- Card body -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Akun Donatur</h5>
+                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_akun']) ?>"></span>
+                    </div>
+                    <div class="col-auto">
+                        <div
+                            class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                            <i class="ni ni-badge"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- <p class="mt-3 mb-0 text-sm">
+                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                    <span class="text-nowrap">Bulan yang lalu</span>
+                </p> -->
+            </div>
+        </div>
+    </div> 
+</div>
 <div class="row justify-center">
     <div class="col">
         <div class="card">
