memperbaharui query terhadap dual relasi terhadap tabel gambar, memisahkan medium dengan wide gambar, menyesuaikan nama record untuk gambar pada galaman home, kategori dan detil

--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -3,8 +3,8 @@
         <div class="row" id="visual-banner-area">
             <div class="col">
                 <div class="app-image img-wrapper d-flex align-items-center justify-content-center overflow-hidden rounded-box wow fadeInUp shadow-none" data-wow-delay=".2s">
-                    <img src="<?= $data['detil_bantuan']->path_gambar; ?>" alt="Gambar <?= $data['detil_bantuan']->nama_gambar; ?>" class="img-fluid d-none d-lg-flex">
-                    <img src="<?= $data['detil_bantuan']->path_gambar; ?>" alt="Gambar <?= $data['detil_bantuan']->nama_gambar; ?>" class="img-fluid d-flex d-lg-none">
+                    <img src="<?= $data['detil_bantuan']->path_gambar_medium; ?>" alt="Gambar <?= $data['detil_bantuan']->nama_gambar_medium; ?>" class="img-fluid d-flex d-lg-none">
+                    <img src="<?= $data['detil_bantuan']->path_gambar_wide; ?>" alt="Gambar <?= $data['detil_bantuan']->nama_gambar_wide; ?>" class="img-fluid d-none d-lg-flex">
                 </div>
             </div>
         </div>
