--- a/app/views/default/bantuan/kategori.html
+++ b/app/views/default/bantuan/kategori.html
@@ -56,7 +56,7 @@
                         <!-- Start Single Service -->
                         <div class="p-4 single-service animation">
                             <div class="app-image img-wrapper rounded-box top overflow-hidden d-flex justify-content-center align-items-center position-relative mb-3">
-                                <img src="<?= $list_bantuan->path_gambar; ?>" alt="<?= $list_bantuan->nama_gambar; ?>" class="img-fluid opacity" data-animation-name="zoom-in">
+                                <img src="<?= $list_bantuan->path_gambar_medium; ?>" alt="<?= $list_bantuan->nama_gambar_medium; ?>" class="img-fluid opacity" data-animation-name="zoom-in">
                                 <div class="service-logo shadow bg-white d-flex justify-content-center align-items-center p-2 position-absolute top right margin-right" data-animation-name="slide">
                                     <img src="<?= $list_bantuan->path_gambar_pengaju; ?>" alt="<?= $list_bantuan->pengaju_bantuan; ?>">
                                 </div>
