--- a/app/views/default/home/index.html
+++ b/app/views/default/home/index.html
@@ -53,7 +53,7 @@
                             <div class="app-image shadow-lg wow fadeInUp" data-wow-delay="<?php $time += $delay; echo $time.'s'; ?>" data-animation-name="pojokers">
                                 <div class="col-12 bg-white overflow-hidden img-wrapper d-flex justify-content-center align-items-center">
                                     <a href="<?= '/bantuan/detil/'.$banner->id_bantuan; ?>">
-                                        <img src="<?= $banner->path_gambar; ?>" alt="<?= $banner->nama_gambar; ?>" class="img-fluid">
+                                        <img src="<?= $banner->path_gambar_medium; ?>" alt="<?= $banner->nama_gambar_medium; ?>" class="img-fluid">
                                     </a>
                                 </div>
                             </div>
@@ -193,9 +193,9 @@
                         <!-- Start Single Service -->
                         <div class="p-4 single-service animation">
                             <div class="app-image img-wrapper rounded-box top overflow-hidden d-flex justify-content-center align-items-center position-relative mb-3">
-                                <img src="<?= $list_bantuan->path_gambar; ?>" alt="<?= $list_bantuan->nama_gambar; ?>" class="img-fluid opacity" data-animation-name="zoom-in">
+                                <img src="<?= $list_bantuan->path_gambar_medium; ?>" alt="<?= $list_bantuan->nama_gambar_medium; ?>" class="img-fluid opacity" data-animation-name="zoom-in">
                                 <div class="service-logo shadow bg-white d-flex justify-content-center align-items-center p-2 position-absolute top left margin-left" data-animation-name="slide">
-                                    <img src="<?= $list_bantuan->path_gambar_pengaju; ?>" alt="<?= $list_bantuan->pengaju_bantuan ?>">
+                                    <img src="<?= $list_bantuan->path_gambar_pengaju; ?>" alt="<?= $list_bantuan->pengaju_bantuan; ?>">
                                 </div>
                                 <div class="service-icon shadow d-flex justify-content-center align-items-center position-absolute bottom left" data-animation-name="slide" <?= (isset($list_bantuan->warna) ? 'style="background-color:' . $list_bantuan->warna .'"' : '') ?>>
                                     <?= BantuanModel::iconLayanan($list_bantuan->layanan); ?>
