--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -12,6 +12,8 @@
     <!-- Icons -->
     <link href="/vendors/nucleo/css/nucleo.css" rel="stylesheet">
     <link href="/vendors/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- Argon CSS -->
     <link type="text/css" href="/assets/main/css/argon.min.css" rel="stylesheet">
     <!-- Core Style -->
@@ -19,7 +21,8 @@
     <?= $this->getLinkRel('action'); ?>
 </head>
 
-<body <?= (isset($this->data['uri']) ? 'data-uri="'. $this->data['uri'] .'"' : '') ?>>
+<body <?= (isset($this->data['uri']) ? 'data-uri="'. $this->data['uri'] .'"' : '') ?> <?= (isset($this->data[Config::get('session/token_name')]) ? 'data-token="'. $this->data[Config::get('session/token_name')] .'"' : '') ?>>
+
     <!-- Sidenav -->
     <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
         <div class="scrollbar-inner">
@@ -172,7 +175,7 @@
         </div>
         <?php } ?>
     <!-- Broken Img Handler -->
-    <script src="/assets/main/js/unload-img-handling.js"></script>
+    
     <!-- Vendor Script -->
     <script src="/vendors/jquery/dist/jquery.min.js"></script>
     <script src="/vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
