--- a/app/views/admin/profile/form-edit-profile.html
+++ b/app/views/admin/profile/form-edit-profile.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-3 order-lg-2">
                     <div class="card-profile-image">
                         <a href="#">
-                            <img src="<?= $data['gambar']->path_gambar; ?>" class="rounded-circle">
+                            <img src="<?= $data['gambar']->path_gambar; ?>" class="rounded-circle border-0">
                         </a>
                     </div>
                 </div>
