--- a/app/views/donatur/profile/index.html
+++ b/app/views/donatur/profile/index.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-3 order-lg-2">
                     <div class="card-profile-image">
                         <a href="#">
-                            <img src="<?= $data['gambar']->path_gambar; ?>" class="rounded-circle bg-gradient-white">
+                            <img src="<?= $data['gambar']->path_gambar; ?>" class="rounded-circle bg-gradient-white border-0">
                         </a>
                     </div>
                 </div>
