--- a/public/assets/route/admin/core/css/admin-style.css
+++ b/public/assets/route/admin/core/css/admin-style.css
@@ -12,6 +12,25 @@ table tbody>tr>th {
     vertical-align: middle !important;
 }
 
+table tbody>tr.highlight {
+    --highlight: var(--lighter);
+    animation: pulse 1s linear 3;
+}
+
+@keyframes pulse {
+    0% {
+        background-color: transparent;
+    }
+
+    50% {
+        background-color: var(--highlight);
+    }
+
+    100% {
+        background-color: transparent;
+    }
+}
+
 .img-avatar {
     vertical-align: middle;
     width: 100px;
@@ -35,7 +54,77 @@ a.disabled {
     column-gap: .5em;
 }
 
+.gap-y-3 {
+    row-gap: 1em;
+}
+
+.form-control:focus {
+    box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%);
+}
+
+/* Texarea */
+.form-group.focused .input-group {
+    box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%);
+}
+
+.form-group.error .input-group {
+    box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%);
+}
+
 /* Toast */
 .d-flex>.toast {
     flex-basis: auto;
+}
+
+/* Select2 */
+.form-control.is-invalid+span.select2 .selection>.select2-selection,
+.was-validated .form-control:invalid+span.select2 .selection>.select2-selection {
+    border-color: #dc3545;
+    padding-right: calc(0.75rem) !important;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right calc(0.375em + 0.1875rem) center;
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+
+.form-control.is-invalid+span.select2-container.select2-container--open .select2-selection--single,
+.was-validated .form-control:invalid+span.select2-container.select2-container--open .select2-selection--single {
+    box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%);
+}
+
+.select2-container.select2-container--open .select2-selection--single,
+.select2-container--default .select2-search--dropdown .select2-search__field,
+.select2-container--default .select2-selection--multiple,
+.select2-container--default.select2-container--focus .select2-selection--multiple {
+    box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%);
+}
+
+@media (min-width: 360px) {
+    .form-group label {
+        font-size: .75rem;
+    }
+
+    .form-group .is-invalid,
+    .form-control.is-invalid+span.select2 .selection>.select2-selection,
+    .was-validated .form-control:invalid+span.select2 .selection>.select2-selection {
+        transition: background-position 0s ease;
+    }
+}
+
+@media (min-width: 375px) {
+    .form-group label {
+        font-size: .775rem;
+    }
+}
+
+@media (min-width: 425px) {
+    .form-group label {
+        font-size: .8rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .form-group label {
+        font-size: .825rem;
+    }
 }
