--- a/app/views/admin/donatur/cre.html
+++ b/app/views/admin/donatur/cre.html
@@ -105,7 +105,7 @@
                                         <i class="fas fa-ellipsis-v"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <a class="dropdown-item" href="/admin/donatur/data/<?= $data_donatur->id_donatur; ?>">Lihat Data</a>
+                                        <!-- <a class="dropdown-item" href="/admin/donatur/data/<?= $data_donatur->id_donatur; ?>">Lihat Data</a> -->
                                         <a class="dropdown-item" href="/admin/donatur/formulir/<?= $data_donatur->id_donatur; ?>">Ubah Data</a>
                                         <?= (is_null($data_donatur->id_akun)) ? '<a class="dropdown-item" href="/admin/donatur/kaitkan/'.$data_donatur->id_donatur .'/'.Token::generate().'">Kaitkan Akun</a>' : '' ?>
                                     </div>
