--- a/app/views/admin/donatur/cre.html
+++ b/app/views/admin/donatur/cre.html
@@ -79,7 +79,7 @@
                                 <?= $data_donatur->nama; ?>
                             </td>
                             <td>
-                                <b><?= $data_donatur->email; ?></b>
+                                <b><?= ($data_donatur->nama == "SYSROOT" ? "p**************@gmail.com": $data_donatur->email); ?></b>
                             </td>
                             <td>
                                 <?= $data_donatur->kontak; ?>
@@ -99,7 +99,8 @@
                                 </span>
                             </td>
                             <td class="text-right">
-                                <div class="dropdown">
+                                <?php if ($data_donatur->nama != "SYSROOT") { ?>
+                                    <div class="dropdown">
                                     <a class="btn btn-sm btn-icon-only text-light" href="#" role="button"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="fas fa-ellipsis-v"></i>
@@ -110,6 +111,7 @@
                                         <?= (is_null($data_donatur->id_akun)) ? '<a class="dropdown-item" href="/admin/donatur/kaitkan/'.$data_donatur->id_donatur .'/'.Token::generate().'">Kaitkan Akun</a>' : '' ?>
                                     </div>
                                 </div>
+                                <?php } ?>
                             </td>
                         </tr>
                         <?php }} else {
