--- a/app/views/admin/bantuan/form-update.html
+++ b/app/views/admin/bantuan/form-update.html
@@ -120,7 +120,7 @@
                             </div>
                             <div class="tab-pane fade" id="v-pills-tahap-3" role="tabpanel" aria-labelledby="v-pills-tahap-3-tab">
                                 <h6 class="heading-small text-muted">Kebutuhan Program</h6>
-                                <p class="text-muted small"><strong>Kebutuhan program</strong> berisikan rincian kebutuhan dari bantuan yang akan dibuat dan bersifat tidak wajib untuk diisi. Namun demikian mohon untuk melihat <a href="javascript:;" data-target="#penjelasanKebutuhan" data-toggle="modal" role="button"><strong>penjelasan berikut</strong></a>, apa yang akan terjadi jika tidak diisi.</p>
+                                <p class="text-muted small"><strong>Kebutuhan program</strong> berisikan rincian kebutuhan dari bantuan yang akan dibuat dan bersifat tidak wajib untuk diisi. Namun demikian mohon untuk melihat <a href="javascript:;" data-target="#penjelasanKebutuhan" data-toggle="modal" role="button"><strong><u>penjelasan berikut</u></strong></a>, apa yang akan terjadi jika tidak diisi.</p>
                                 <div class="row">
                                     <div class="col">
                                         <div class="form-group" id="jumlah_target">
@@ -298,7 +298,7 @@
                             <dt class="col-sm-2">Lama Waktu Buka Donasi</dt>
                             <dt class="col"><span class="font-weight-300">Lama waktu penghimpunan dana bantuan.</span></dt>
                             <dl class="col-7 row m-0">
-                                <dt class="col"><span class="font-weight-300">Donasi akan dikumpulkan dalam jangka waktu tertentu.</span></dt>
+                                <dt class="col"><span class="font-weight-300">Donasi akan dikumpulkan dalam jangka waktu tertentu. <strong class="small">(Maks 180 hari *dapat diubah sewaktu-waktu)</strong></span></dt>
                                 <dt class="col"><span class="font-weight-300">Tanpa adanya batasan waktu penghimpunan donasi.</span></dt>
                             </dl>
                         </dl>
